--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Rens Jaspers - Angular Developer</title>
+    <title>Rens Jaspers - Full Stack Web Developer</title>
     <base href="/" />
     <meta
       name="description"
-      content="Rens Jaspers develops applications with Angular 2 and NestJS."
+      content="Rens Jaspers - Full Stack Web Developer in Amsterdam, The Netherlands"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/icons/icon-192x192.png" />
